--- a/2022.08.05_html/ch08/layout.css
+++ b/2022.08.05_html/ch08/layout.css
@@ -77,3 +77,22 @@ footer{
 	color:white;	
 	text-align:center;
 }
+article{
+	width: 90%;
+	height: auto;
+	margin:20px 10px;
+	padding: 20px;
+}
+#pet1{
+	border: 2px solid black;
+	border-radius: 10px;
+}
+#pet2{
+	border: 1px dotted #ccc;
+	border-radius: 20px;
+}
+#pet3{
+	border: 2px double forestgreen;
+	border-top-left-radius: 30px;
+	border-bottom-right-radius: 30px;
+}
